Geometry node crash when Join Geometry has only muted inputs #89390

Closed
opened 2021-06-23 19:32:31 +02:00 by Lukas Tönne · 6 comments
Member

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 3.0.0 Alpha, branch: master (modified), commit date: 2021-06-23 04:56, hash: 071799d4fc
Worked: 2.93.0

Short description of error
Geometry nodes crash when two nodes that are connected to a reroute and feed into "Join Geometry" are both muted.

Exact steps for others to reproduce the error
image.png

  1. Make a default geometry node tree.
  2. Add a "Join Geometry" node.
  3. Add two arbitrary input nodes (i used "Assign Material").
  4. Connect both input nodes to a "Reroute" node.
  5. Feed some source geometry into the Reroute node.
  6. Mute both nodes feeding into the Join Geometry
  7. Geometry nodes assert fails, because the Join Geometry node has not computed any output geometry.

JoinGeometryCrash.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master (modified), commit date: 2021-06-23 04:56, hash: `071799d4fc` Worked: 2.93.0 **Short description of error** Geometry nodes crash when two nodes that are connected to a reroute and feed into "Join Geometry" are both muted. **Exact steps for others to reproduce the error** ![image.png](https://archive.blender.org/developer/F10191293/image.png) 1. Make a default geometry node tree. 1. Add a "Join Geometry" node. 1. Add two arbitrary input nodes (i used "Assign Material"). 1. Connect both input nodes to a "Reroute" node. 1. Feed some source geometry into the Reroute node. 1. **Mute** both nodes feeding into the Join Geometry 1. Geometry nodes assert fails, because the Join Geometry node has not computed any output geometry. [JoinGeometryCrash.blend](https://archive.blender.org/developer/F10191292/JoinGeometryCrash.blend)
Author
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne

Added subscriber: @chemicalcrux

Added subscriber: @chemicalcrux

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm this in the 3.0.0 alpha. I get an assert failure in the debug build:

BLI_assert failed: D:\blender-git\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:941, assert_expected_outputs_have_been_computed(), at 'output_state.has_been_computed'

Stacktrace: P2205

No crash in 2.93.0

Can confirm this in the 3.0.0 alpha. I get an assert failure in the debug build: ``` BLI_assert failed: D:\blender-git\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:941, assert_expected_outputs_have_been_computed(), at 'output_state.has_been_computed' ``` Stacktrace: [P2205](https://archive.blender.org/developer/P2205.txt) No crash in 2.93.0
Jacques Lucke self-assigned this 2021-06-24 09:45:37 +02:00

This issue was referenced by a13314a03f

This issue was referenced by a13314a03f929d30d6db174541abb10daa501117
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89390
No description provided.