Fix T89390: crash when join geometry node has only muted inputs